// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`attack scenarios > big_plains equal 20k tiles each, 1M vs 1M, attack 200k 1`] = `
{
  "attackerLossPerSecond": 8547,
  "attackerLossPerTile": 94.79,
  "attackerTiles": 20000,
  "attackerTroopsLost": 200000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 4509,
  "defenderLossPerTile": 50,
  "defenderTiles": 20000,
  "defenderTroopsLost": 105500,
  "finished": true,
  "ticks": 234,
  "tilesConquered": 2110,
  "tilesPerSecond": 90.17,
}
`;

exports[`attack scenarios > big_plains equal 20k tiles each, 200k vs 200k, attack 40k 1`] = `
{
  "attackerLossPerSecond": 6780,
  "attackerLossPerTile": 78.13,
  "attackerTiles": 20000,
  "attackerTroopsLost": 40000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 867.8,
  "defenderLossPerTile": 10,
  "defenderTiles": 20000,
  "defenderTroopsLost": 5120,
  "finished": true,
  "ticks": 59,
  "tilesConquered": 512,
  "tilesPerSecond": 86.78,
}
`;

exports[`attack scenarios > giant 1M vs 600k tiles, 8M troops all-in vs 1M defender 1`] = `
{
  "attackerLossPerSecond": 48010,
  "attackerLossPerTile": 7.97,
  "attackerTiles": 1010406,
  "attackerTroopsLost": 3677799,
  "defenderEliminated": false,
  "defenderLossPerSecond": 9656,
  "defenderLossPerTile": 1.603,
  "defenderTiles": 591663,
  "defenderTroopsLost": 739638,
  "finished": true,
  "ticks": 766,
  "tilesConquered": 461482,
  "tilesPerSecond": 6025,
}
`;

exports[`attack scenarios > giant 1M vs 600k tiles, 8M vs 8M troops, attack 2M 1`] = `
{
  "attackerLossPerSecond": 43480,
  "attackerLossPerTile": 29.26,
  "attackerTiles": 1010406,
  "attackerTroopsLost": 2000000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 19320,
  "defenderLossPerTile": 13,
  "defenderTiles": 591663,
  "defenderTroopsLost": 888563,
  "finished": true,
  "ticks": 460,
  "tilesConquered": 68351,
  "tilesPerSecond": 1486,
}
`;

exports[`attack scenarios > giant 1M-tile attacker, 8M troops, attack 2M vs 400-tile turtle with 4M (10k/tile) 1`] = `
{
  "attackerLossPerSecond": 1335000,
  "attackerLossPerTile": 2753,
  "attackerTiles": 1010018,
  "attackerTroopsLost": 1068162,
  "defenderEliminated": true,
  "defenderLossPerSecond": 3724000,
  "defenderLossPerTile": 7679,
  "defenderTiles": 388,
  "defenderTroopsLost": 2979310,
  "finished": true,
  "ticks": 8,
  "tilesConquered": 388,
  "tilesPerSecond": 485,
}
`;

exports[`attack scenarios > giant 1M-tile attacker, 8M troops, attack 2M vs 400-tile turtle with 400k (1k/tile) 1`] = `
{
  "attackerLossPerSecond": 78640,
  "attackerLossPerTile": 101.3,
  "attackerTiles": 1010018,
  "attackerTroopsLost": 39319,
  "defenderEliminated": true,
  "defenderLossPerSecond": 595900,
  "defenderLossPerTile": 767.9,
  "defenderTiles": 388,
  "defenderTroopsLost": 297931,
  "finished": true,
  "ticks": 5,
  "tilesConquered": 388,
  "tilesPerSecond": 776,
}
`;

exports[`attack scenarios > giant 400-tile attacker, 1M troops all-in vs 1M-tile defender with 1M 1`] = `
{
  "attackerLossPerSecond": 18550,
  "attackerLossPerTile": 42.75,
  "attackerTiles": 388,
  "attackerTroopsLost": 1000000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 248.1,
  "defenderLossPerTile": 0.5718,
  "defenderTiles": 1010018,
  "defenderTroopsLost": 13375,
  "finished": true,
  "ticks": 539,
  "tilesConquered": 23393,
  "tilesPerSecond": 434,
}
`;

exports[`attack scenarios > giant 400-tile attacker, 100k troops, attack 50k vs 1M-tile sparse defender with 1M 1`] = `
{
  "attackerLossPerSecond": 1412,
  "attackerLossPerTile": 53.25,
  "attackerTiles": 388,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 1010018,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 354,
  "tilesConquered": 939,
  "tilesPerSecond": 26.53,
}
`;

exports[`attack scenarios > giant 600k vs 1M tiles, 1M troops attack 500k vs 8M defender 1`] = `
{
  "attackerLossPerSecond": 10500,
  "attackerLossPerTile": 31.9,
  "attackerTiles": 591663,
  "attackerTroopsLost": 500000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 2305,
  "defenderLossPerTile": 7,
  "defenderTiles": 1010406,
  "defenderTroopsLost": 109725,
  "finished": true,
  "ticks": 476,
  "tilesConquered": 15675,
  "tilesPerSecond": 329.3,
}
`;

exports[`attack scenarios > plains 1-troop attack vs 50k defender 1`] = `
{
  "attackerLossPerSecond": 3.333,
  "attackerLossPerTile": 1,
  "attackerTiles": 5000,
  "attackerTroopsLost": 1,
  "defenderEliminated": false,
  "defenderLossPerSecond": 33.33,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 10,
  "finished": true,
  "ticks": 3,
  "tilesConquered": 1,
  "tilesPerSecond": 3.333,
}
`;

exports[`attack scenarios > plains 10M-troop attack vs defender with 1 troop 1`] = `
{
  "attackerLossPerSecond": 10890,
  "attackerLossPerTile": 21.78,
  "attackerTiles": 5000,
  "attackerTroopsLost": 108913,
  "defenderEliminated": true,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 5000,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 100,
  "tilesConquered": 5000,
  "tilesPerSecond": 500,
}
`;

exports[`attack scenarios > plains 20-city defender (650k on 5k tiles, 130/tile), stack 1.67x their army 1`] = `
{
  "attackerLossPerSecond": 18840,
  "attackerLossPerTile": 37.69,
  "attackerTiles": 5000,
  "attackerTroopsLost": 188426,
  "defenderEliminated": true,
  "defenderLossPerSecond": 63710,
  "defenderLossPerTile": 127.4,
  "defenderTiles": 5000,
  "defenderTroopsLost": 637130,
  "finished": true,
  "ticks": 100,
  "tilesConquered": 5000,
  "tilesPerSecond": 500,
}
`;

exports[`attack scenarios > plains 20-city defender (650k on 5k tiles, 130/tile), stack 1/4 their army 1`] = `
{
  "attackerLossPerSecond": 7927,
  "attackerLossPerTile": 128.2,
  "attackerTiles": 5000,
  "attackerTroopsLost": 162500,
  "defenderEliminated": false,
  "defenderLossPerSecond": 8041,
  "defenderLossPerTile": 130,
  "defenderTiles": 5000,
  "defenderTroopsLost": 164840,
  "finished": true,
  "ticks": 205,
  "tilesConquered": 1268,
  "tilesPerSecond": 61.85,
}
`;

exports[`attack scenarios > plains 20-city defender (650k on 5k tiles, 130/tile), stack 1x their army 1`] = `
{
  "attackerLossPerSecond": 22640,
  "attackerLossPerTile": 45.28,
  "attackerTiles": 5000,
  "attackerTroopsLost": 226410,
  "defenderEliminated": true,
  "defenderLossPerSecond": 63710,
  "defenderLossPerTile": 127.4,
  "defenderTiles": 5000,
  "defenderTroopsLost": 637130,
  "finished": true,
  "ticks": 100,
  "tilesConquered": 5000,
  "tilesPerSecond": 500,
}
`;

exports[`attack scenarios > plains 20-city defender (650k on 5k tiles, 130/tile), stack 3/4 their army 1`] = `
{
  "attackerLossPerSecond": 28790,
  "attackerLossPerTile": 65.64,
  "attackerTiles": 5000,
  "attackerTroopsLost": 328208,
  "defenderEliminated": true,
  "defenderLossPerSecond": 55890,
  "defenderLossPerTile": 127.4,
  "defenderTiles": 5000,
  "defenderTroopsLost": 637130,
  "finished": true,
  "ticks": 114,
  "tilesConquered": 5000,
  "tilesPerSecond": 438.6,
}
`;

exports[`attack scenarios > plains 50k attack vs defender with 0 troops 1`] = `
{
  "attackerLossPerSecond": 10870,
  "attackerLossPerTile": 22.22,
  "attackerTiles": 5000,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 5000,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 46,
  "tilesConquered": 2250,
  "tilesPerSecond": 489.1,
}
`;

exports[`attack scenarios > plains 100-tile turtle, 1M troops: conquered outright after one tile 1`] = `
{
  "attackerLossPerSecond": 21180,
  "attackerLossPerTile": 42.35,
  "attackerTiles": 9900,
  "attackerTroopsLost": 4235,
  "defenderEliminated": true,
  "defenderLossPerSecond": 50000,
  "defenderLossPerTile": 100,
  "defenderTiles": 100,
  "defenderTroopsLost": 10000,
  "finished": true,
  "ticks": 2,
  "tilesConquered": 100,
  "tilesPerSecond": 500,
}
`;

exports[`attack scenarios > plains 100-troop attack vs 1M defender 1`] = `
{
  "attackerLossPerSecond": 333.3,
  "attackerLossPerTile": 100,
  "attackerTiles": 5000,
  "attackerTroopsLost": 100,
  "defenderEliminated": false,
  "defenderLossPerSecond": 666.7,
  "defenderLossPerTile": 200,
  "defenderTiles": 5000,
  "defenderTroopsLost": 200,
  "finished": true,
  "ticks": 3,
  "tilesConquered": 1,
  "tilesPerSecond": 3.333,
}
`;

exports[`attack scenarios > plains 400-tile turtle, 4M troops (10k/tile) under a defense post, attacked with 1M 1`] = `
{
  "attackerLossPerSecond": 384600,
  "attackerLossPerTile": 20830,
  "attackerTiles": 9600,
  "attackerTroopsLost": 1000000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 184600,
  "defenderLossPerTile": 10000,
  "defenderTiles": 400,
  "defenderTroopsLost": 480000,
  "finished": true,
  "ticks": 26,
  "tilesConquered": 48,
  "tilesPerSecond": 18.46,
}
`;

exports[`attack scenarios > plains 400-tile turtle, 400k troops (1k/tile), attacked with 400k 1`] = `
{
  "attackerLossPerSecond": 44690,
  "attackerLossPerTile": 134.1,
  "attackerTiles": 9600,
  "attackerTroopsLost": 53625,
  "defenderEliminated": true,
  "defenderLossPerSecond": 250800,
  "defenderLossPerTile": 752.5,
  "defenderTiles": 400,
  "defenderTroopsLost": 301000,
  "finished": true,
  "ticks": 12,
  "tilesConquered": 400,
  "tilesPerSecond": 333.3,
}
`;

exports[`attack scenarios > plains big attacker (9500 tiles) vs small defender (500 tiles) 1`] = `
{
  "attackerLossPerSecond": 5556,
  "attackerLossPerTile": 114.9,
  "attackerTiles": 9500,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 4833,
  "defenderLossPerTile": 100,
  "defenderTiles": 500,
  "defenderTroopsLost": 8700,
  "finished": true,
  "ticks": 18,
  "tilesConquered": 87,
  "tilesPerSecond": 48.33,
}
`;

exports[`attack scenarios > plains bot vs human defender 1`] = `
{
  "attackerLossPerSecond": 3846,
  "attackerLossPerTile": 78.13,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 492.3,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1280,
  "finished": true,
  "ticks": 26,
  "tilesConquered": 128,
  "tilesPerSecond": 49.23,
}
`;

exports[`attack scenarios > plains bot vs terra nullius, attack 2k 1`] = `
{
  "attackerLossPerSecond": 400,
  "attackerLossPerTile": 8,
  "attackerTiles": 1000,
  "attackerTroopsLost": 2000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 50,
  "tilesConquered": 250,
  "tilesPerSecond": 50,
}
`;

exports[`attack scenarios > plains defender at troop cap (200k on 5k tiles, 40/tile), stack 1.67x their army 1`] = `
{
  "attackerLossPerSecond": 13340,
  "attackerLossPerTile": 26.68,
  "attackerTiles": 5000,
  "attackerTroopsLost": 133378,
  "defenderEliminated": true,
  "defenderLossPerSecond": 19600,
  "defenderLossPerTile": 39.21,
  "defenderTiles": 5000,
  "defenderTroopsLost": 196040,
  "finished": true,
  "ticks": 100,
  "tilesConquered": 5000,
  "tilesPerSecond": 500,
}
`;

exports[`attack scenarios > plains defender at troop cap (200k on 5k tiles, 40/tile), stack 1/4 their army 1`] = `
{
  "attackerLossPerSecond": 5263,
  "attackerLossPerTile": 90.58,
  "attackerTiles": 5000,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 2324,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 22080,
  "finished": true,
  "ticks": 95,
  "tilesConquered": 552,
  "tilesPerSecond": 58.11,
}
`;

exports[`attack scenarios > plains defender at troop cap (200k on 5k tiles, 40/tile), stack 1x their army 1`] = `
{
  "attackerLossPerSecond": 17240,
  "attackerLossPerTile": 57.41,
  "attackerTiles": 5000,
  "attackerTroopsLost": 200000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 12010,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 139360,
  "finished": true,
  "ticks": 116,
  "tilesConquered": 3484,
  "tilesPerSecond": 300.3,
}
`;

exports[`attack scenarios > plains defender at troop cap (200k on 5k tiles, 40/tile), stack 3/4 their army 1`] = `
{
  "attackerLossPerSecond": 11900,
  "attackerLossPerTile": 80.34,
  "attackerTiles": 5000,
  "attackerTroopsLost": 150000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 5927,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 74680,
  "finished": true,
  "ticks": 126,
  "tilesConquered": 1867,
  "tilesPerSecond": 148.2,
}
`;

exports[`attack scenarios > plains defender with defense posts covering the whole border 1`] = `
{
  "attackerLossPerSecond": 8333,
  "attackerLossPerTile": 384.6,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 216.7,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 260,
  "finished": true,
  "ticks": 12,
  "tilesConquered": 26,
  "tilesPerSecond": 21.67,
}
`;

exports[`attack scenarios > plains defender with one defense post at the border 1`] = `
{
  "attackerLossPerSecond": 7143,
  "attackerLossPerTile": 250,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 285.7,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 400,
  "finished": true,
  "ticks": 14,
  "tilesConquered": 40,
  "tilesPerSecond": 28.57,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 10k 1`] = `
{
  "attackerLossPerSecond": 3846,
  "attackerLossPerTile": 78.13,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 492.3,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1280,
  "finished": true,
  "ticks": 26,
  "tilesConquered": 128,
  "tilesPerSecond": 49.23,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 25k 1`] = `
{
  "attackerLossPerSecond": 6579,
  "attackerLossPerTile": 78.13,
  "attackerTiles": 5000,
  "attackerTroopsLost": 25000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 842.1,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3200,
  "finished": true,
  "ticks": 38,
  "tilesConquered": 320,
  "tilesPerSecond": 84.21,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 50k (all-in) 1`] = `
{
  "attackerLossPerSecond": 10640,
  "attackerLossPerTile": 60.46,
  "attackerTiles": 5000,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1760,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 8270,
  "finished": true,
  "ticks": 47,
  "tilesConquered": 827,
  "tilesPerSecond": 176,
}
`;

exports[`attack scenarios > plains human vs bot defender 1`] = `
{
  "attackerLossPerSecond": 2703,
  "attackerLossPerTile": 54.64,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 494.6,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1830,
  "finished": true,
  "ticks": 37,
  "tilesConquered": 183,
  "tilesPerSecond": 49.46,
}
`;

exports[`attack scenarios > plains human vs terra nullius, attack 2k 1`] = `
{
  "attackerLossPerSecond": 800,
  "attackerLossPerTile": 16,
  "attackerTiles": 1000,
  "attackerTroopsLost": 2000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 25,
  "tilesConquered": 125,
  "tilesPerSecond": 50,
}
`;

exports[`attack scenarios > plains human vs terra nullius, attack 20k 1`] = `
{
  "attackerLossPerSecond": 3571,
  "attackerLossPerTile": 16,
  "attackerTiles": 1000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 56,
  "tilesConquered": 1250,
  "tilesPerSecond": 223.2,
}
`;

exports[`attack scenarios > plains nation vs bot defender 1`] = `
{
  "attackerLossPerSecond": 2703,
  "attackerLossPerTile": 54.64,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 494.6,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1830,
  "finished": true,
  "ticks": 37,
  "tilesConquered": 183,
  "tilesPerSecond": 49.46,
}
`;

exports[`attack scenarios > plains outmatched 20k vs 200k, attack 4k 1`] = `
{
  "attackerLossPerSecond": 1290,
  "attackerLossPerTile": 88.89,
  "attackerTiles": 5000,
  "attackerTroopsLost": 4000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 580.6,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1800,
  "finished": true,
  "ticks": 31,
  "tilesConquered": 45,
  "tilesPerSecond": 14.52,
}
`;

exports[`attack scenarios > plains outmatched 20k vs 200k, attack 20k (all-in) 1`] = `
{
  "attackerLossPerSecond": 3333,
  "attackerLossPerTile": 90.5,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1473,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 8840,
  "finished": true,
  "ticks": 60,
  "tilesConquered": 221,
  "tilesPerSecond": 36.83,
}
`;

exports[`attack scenarios > plains overwhelming 200k vs 20k, attack 40k 1`] = `
{
  "attackerLossPerSecond": 11110,
  "attackerLossPerTile": 33.39,
  "attackerTiles": 5000,
  "attackerTroopsLost": 40000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1331,
  "defenderLossPerTile": 4,
  "defenderTiles": 5000,
  "defenderTroopsLost": 4792,
  "finished": true,
  "ticks": 36,
  "tilesConquered": 1198,
  "tilesPerSecond": 332.8,
}
`;

exports[`attack scenarios > plains small attacker (500 tiles) vs big defender (9500 tiles) 1`] = `
{
  "attackerLossPerSecond": 3571,
  "attackerLossPerTile": 75.76,
  "attackerTiles": 500,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 235.7,
  "defenderLossPerTile": 5,
  "defenderTiles": 9500,
  "defenderTroopsLost": 660,
  "finished": true,
  "ticks": 28,
  "tilesConquered": 132,
  "tilesPerSecond": 47.14,
}
`;

exports[`attack scenarios > plains traitor defender 1`] = `
{
  "attackerLossPerSecond": 2326,
  "attackerLossPerTile": 39.06,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 595.3,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 2560,
  "finished": true,
  "ticks": 43,
  "tilesConquered": 256,
  "tilesPerSecond": 59.53,
}
`;

exports[`attack scenarios > world highland/mountain region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 4444,
  "attackerLossPerTile": 111.1,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 800,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3600,
  "finished": true,
  "ticks": 45,
  "tilesConquered": 180,
  "tilesPerSecond": 40,
}
`;

exports[`attack scenarios > world huge empires (~150k tiles each), 2M vs 2M, attack 400k 1`] = `
{
  "attackerLossPerSecond": 10000,
  "attackerLossPerTile": 83.7,
  "attackerTiles": 108968,
  "attackerTroopsLost": 400000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1912,
  "defenderLossPerTile": 16,
  "defenderTiles": 121741,
  "defenderTroopsLost": 76464,
  "finished": true,
  "ticks": 400,
  "tilesConquered": 4779,
  "tilesPerSecond": 119.5,
}
`;

exports[`attack scenarios > world mountain region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 4348,
  "attackerLossPerTile": 114.9,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 756.5,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3480,
  "finished": true,
  "ticks": 46,
  "tilesConquered": 174,
  "tilesPerSecond": 37.83,
}
`;

exports[`attack scenarios > world mountain region, human vs terra nullius, attack 20k 1`] = `
{
  "attackerLossPerSecond": 11760,
  "attackerLossPerTile": 22,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 17,
  "tilesConquered": 909,
  "tilesPerSecond": 534.7,
}
`;

exports[`attack scenarios > world plains-ish region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 4255,
  "attackerLossPerTile": 89.29,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 953.2,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 4480,
  "finished": true,
  "ticks": 47,
  "tilesConquered": 224,
  "tilesPerSecond": 47.66,
}
`;
